# hermostui

./: Cargo.toml  LICENSE  README.md
examples/: furier.rs  mnist.rs  perimä.rs  sin_approch.rs
src/: baby.rs  dady.rs  learning.rs  lib.rs  linealg.rs  main.rs  modules.rs
src/history/: linear_reg.rs  nn.rs  poly_patch.rs  poly_reg.rs
