[package]
name = "hermostui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
plotters = "0.3.6"
serde-pickle = "1.0"
